--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                   <table>
                                       <tr>
                                           <td class="titre">Âge :</td>
-                                          <td class="detailProfil">21 ans (1994)</td>
+                                          <td class="detailProfil">22 ans (1994)</td>
                                       </tr>
                                   </table>
                                   </div>
@@ -152,10 +152,10 @@
                                                         <div class="sujet">2016-2017 Alternance (en cours)</div> <div class="lieu">CGI</div>  <div class="ville">Développeur Web - Technicien Support</div>
                                                         <ul class="description">
                                                             <li>
-                                                                Technologies: AngularJS, PostgreSQL
+                                                                Technologies: PostgreSQL
                                                             </li>
                                                             <li>
-                                                                Logiciels: SpagoBi, Talend Open Studio
+                                                                Logiciels et Applications: SpagoBi, Talend Open Studio, OTRS
                                                             </li>
                                                         </ul>
                                                     </li>
