mise à jour informations

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                                         <div class="sujet">2016-2017 Alternance (en cours)</div> <div class="lieu">CGI</div>  <div class="ville">Développeur Web - Technicien Support</div>
                                                         <ul class="description">
                                                             <li>
-                                                                Technologies: PostgreSQL
+                                                                Technologies: PostgreSQL, MySQL, Php (CodeIgniter,Smarty), AngularJS, Java 
                                                             </li>
                                                             <li>
                                                                 Logiciels et Applications: SpagoBi, Talend Open Studio, OTRS
