flag en développement

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
               </div>
 
        </md-toolbar>
+       <md-toolbar class="md-warn">
+              <div class="md-toolbar-tools">
+                            <h2 class="md-flex">Site en développement...</h2>
+              </div>
+       </md-toolbar>
       <!-- Begin Loader -->
       <div layout="column", layout-align="center center" ng-show="isLoading" layout-fill>
                   <md-progress-circular md-diameter="70" md-mode="indeterminate" layout-align="space-around"></md-progress-circular>
