--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
        </md-toolbar>
        <md-toolbar class="md-warn">
-              <div class="md-toolbar-tools">
+              <div class="md-toolbar-tools" layout-align="center center">
                             <h2 class="md-flex">Site en développement...</h2>
               </div>
        </md-toolbar>
