--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 			<meta charset="UTF-8">
 		<!-- Angular Material style sheet -->
 		<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
+		<title>Théophane Girard - CV</title>
 	</head>
 
 	<body ng-controller="CategoriesController" ng-cloak>
