--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<!-- Angular Material style sheet -->
 		<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
 		<title>Théophane Girard - CV</title>
+		<meta name="Description" CONTENT="Site CV de Théophane Girard - Développeur AngularJS, Angular, PHP, Node, Java, C#, MySQL, PostreSQL">
 	</head>
 
 	<body ng-controller="CategoriesController" ng-cloak>
