update meta tags

--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
 			<meta charset="UTF-8">
 		<!-- Angular Material style sheet -->
 		<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
+		<!-- made by www.metatags.org -->
+		<meta name="description" content="Développeur AngularJS, Angular, Java, C#, Php, Node, MySQL, PostgreSQL" />
+		<meta name="keywords" content="AngularJS Angular Java C# Php Node MySQL PostgreSQL developpeur web front-end back-end" />
+		<meta name="author" content="metatags generator">
+		<meta name="robots" content="index, follow">
+		<meta name="revisit-after" content="3 month">
 		<title>Théophane Girard - CV</title>
-		<meta name="Description" CONTENT="Site CV de Théophane Girard - Développeur AngularJS, Angular, PHP, Node, Java, C#, MySQL, PostreSQL">
+		<!--  -->
 	</head>
 
 	<body ng-controller="CategoriesController" ng-cloak>
